istio/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: book-store-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: book-store
spec:
  hosts:
    - "*"
  gateways:
    - book-store-gateway
  http:
    - match:
        - uri:
            exact: /
        - uri:
            exact: /error
        - uri:
            prefix: /details
      route:
        - destination:
            host: sm-book-web
            port:
              number: 3000
